--- a/k8-manifest/k8-service.yaml
+++ b/k8-manifest/k8-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tetris-service
+  name: secret_santa-service
 spec:
   selector:
-    app: tetris
+    app: secret_santa
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 8080
   type: LoadBalancer
