--- a/k8-manifest/k8-service.yaml
+++ b/k8-manifest/k8-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: secret_santa-service
+  name: santa-service
 spec:
   selector:
     app: secret_santa
