--- a/k8-manifest/k8-deployment.yaml
+++ b/k8-manifest/k8-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: secret-santa
-          image: felix081/santa:latest # Replace with the actual image tag
+          image: felix081/taskmaster:latest # Replace with the actual image tag
           ports:
             - containerPort: 8080 # Replace with the port your Tetris game listens on
 
