--- a/k8-manifest/k8-service.yaml
+++ b/k8-manifest/k8-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: santa-service
+  name: tetris-service
 spec:
   selector:
-    app: secret_santa
+    app: tetris
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 80
   type: LoadBalancer
