--- a/k8-manifest/k8-deployment.yaml
+++ b/k8-manifest/k8-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: tetris
-          image: adijaiswal/tetris:v3 # Replace with the actual image tag
+          image: nginx:stable-alpine3.20-perl # Replace with the actual image tag
           ports:
             - containerPort: 80 # Replace with the port your Tetris game listens on
 
