--- a/k8-manifest/k8-service.yaml
+++ b/k8-manifest/k8-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tetris-service
+  name: webapp-service
 spec:
   selector:
-    app: tetris
+    app: nextcloud
   ports:
     - protocol: TCP
       port: 80
